--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.firebase:geofire-android:3.0.0'
 
     // Support libraries
     implementation 'com.android.support:design:28.0.0'
@@ -35,18 +36,24 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
+    // GeoFencing Library
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
     // Material Edit library
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
     // Calligraphy library
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
-    // Spots progress dialog library
+    // Spot progress dialog & Card View libraries
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
